[gd_scene load_steps=22 format=3 uid="uid://bdp65nv8ttjmn"]

[ext_resource type="Script" path="res://minigames/counting/falling_decimals_0_to_2/number.gd" id="1_4aak3"]
[ext_resource type="Shader" path="res://assets/materials/texture_outline.gdshader" id="2_jssf2"]
[ext_resource type="Texture2D" uid="uid://dskrj8xs5aom3" path="res://minigames/counting/falling_numbers_0_to_9/assets/horizontal_bee.png" id="2_yrab5"]
[ext_resource type="Texture2D" uid="uid://b6jyxophbxicp" path="res://minigames/counting/falling_numbers_0_to_9/assets/vertical_bee.png" id="3_jk23d"]
[ext_resource type="Texture2D" uid="uid://bxialyxlg0w64" path="res://minigames/counting/falling_numbers_0_to_9/assets/zero_white.svg" id="7_ic2yu"]
[ext_resource type="Texture2D" uid="uid://cdpelcmm02yqa" path="res://minigames/counting/falling_numbers_0_to_9/assets/blue.png" id="7_ju4gm"]
[ext_resource type="Texture2D" uid="uid://cedjhiyh6330u" path="res://minigames/counting/falling_numbers_0_to_9/assets/one_white.svg" id="8_ftfek"]
[ext_resource type="Texture2D" uid="uid://cgxmosd1hppwi" path="res://minigames/counting/falling_numbers_0_to_9/assets/two_white.svg" id="9_1e631"]
[ext_resource type="Texture2D" uid="uid://bucl34ocigxcp" path="res://minigames/counting/falling_numbers_0_to_9/assets/three_white.svg" id="10_htx2q"]
[ext_resource type="Texture2D" uid="uid://b2bd1qui21vop" path="res://minigames/counting/falling_numbers_0_to_9/assets/four_white.svg" id="11_pu0m7"]
[ext_resource type="Texture2D" uid="uid://bsohhr146ytuj" path="res://minigames/counting/falling_numbers_0_to_9/assets/five_white.svg" id="12_1dbwg"]
[ext_resource type="Texture2D" uid="uid://dlso3ap2qef7g" path="res://minigames/counting/falling_numbers_0_to_9/assets/six_white.svg" id="13_4xevt"]
[ext_resource type="Texture2D" uid="uid://dopk81vcd5qch" path="res://minigames/counting/falling_numbers_0_to_9/assets/seven_white.svg" id="14_j4kja"]
[ext_resource type="Texture2D" uid="uid://cjpeuuptbk401" path="res://minigames/counting/falling_numbers_0_to_9/assets/eight_white.svg" id="15_qpkwc"]
[ext_resource type="Texture2D" uid="uid://0t4s04settg0" path="res://minigames/counting/falling_numbers_0_to_9/assets/nine_white.svg" id="16_jtydg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0x58q"]
shader = ExtResource("2_jssf2")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 10.0

[sub_resource type="SpriteFrames" id="SpriteFrames_6ckqd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yrab5")
}, {
"duration": 1.0,
"texture": ExtResource("3_jk23d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_7cq5b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ya7d5"]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1e-05)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fldmh"]
_data = {
"RESET": SubResource("Animation_7cq5b"),
"fade_out": SubResource("Animation_ya7d5")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_hvaxo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ic2yu")
}, {
"duration": 1.0,
"texture": ExtResource("8_ftfek")
}, {
"duration": 1.0,
"texture": ExtResource("9_1e631")
}, {
"duration": 1.0,
"texture": ExtResource("10_htx2q")
}, {
"duration": 1.0,
"texture": ExtResource("11_pu0m7")
}, {
"duration": 1.0,
"texture": ExtResource("12_1dbwg")
}, {
"duration": 1.0,
"texture": ExtResource("13_4xevt")
}, {
"duration": 1.0,
"texture": ExtResource("14_j4kja")
}, {
"duration": 1.0,
"texture": ExtResource("15_qpkwc")
}, {
"duration": 1.0,
"texture": ExtResource("16_jtydg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Number" type="Node2D"]
script = ExtResource("1_4aak3")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_0x58q")
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_6ckqd")

[node name="ExitTimer" type="Timer" parent="."]

[node name="TickDetector" type="Area2D" parent="."]

[node name="TickDet" type="CollisionPolygon2D" parent="TickDetector"]
polygon = PackedVector2Array(10, 20, -10, 20, -10, 35, 10, 35)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fldmh")
}

[node name="TextureButton" type="TextureButton" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -33.5
offset_right = 46.0
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_ju4gm")

[node name="NumberSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hvaxo")

[connection signal="area_entered" from="TickDetector" to="." method="_on_tick_detector_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
